[tool.poetry]
name = "fa-search-bot"
version = "1.15.20"
description = "Telegram bot which provides FurAffinity integration. With searches, subscriptions and automated embedding"
authors = ["Deer Spangle <deer@spangle.org.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
python-dateutil = "^2.8.1"
simple-heartbeat = "^0.1.2"
docker = "^5.0.3"
pyparsing = "^3.0.6"
tomlkit = "^0.7.0"
telethon = "1.28.5"
Pillow = "^8.3.2"
yippi = "0.2.0.1"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
requests-mock = "^1.7.0"
pyparsing = { extras = ["diagrams"], version = "^3.0.6" }
taskipy = "^1.4.0"
Pyrogram = "^1.0.7"
tgintegration = "^1.1.0"
pytest-asyncio = "^0.14.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
flake8-black = "^0.3.3"
mypy = "^0.961"
black = "^22.3.0"
flake8-type-checking = "^2.4.0"
types-python-dateutil = "^2.8.17"
types-requests = "^2.27.30"

[tool.taskipy.tasks]
test = "py.test fa_search_bot/tests --ignore=fa_search_bot/tests/integration"
run = "python3 run.py"
generate_railroad_diagram = "python3 experiments/pyparsing_railroad.py"
test_telegram_integration = "py.test fa_search_bot/tests/integration/telegram -s"
get_session_string = "python3 fa_search_bot/tests/integration/telegram/create_session_string.py"
test_site_integration = "py.test fa_search_bot/tests/integration/sites -s"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
mypy_path = "fa_search_bot/stubs"
files = "fa_search_bot"
exclude = ["fa_search_bot/tests", "fa_search_bot/stubs"]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# follow_imports = "silent"

[tool.isort]
line_length = 120
profile = "black"
